<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image1_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/author_avatar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/thumbnail"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/author_avatar" />

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/author_avatar"
            android:text="@string/author"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/author"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/thumbnail"
            android:text="@string/default_title_text"
            android:textColor="@color/black"
            android:drawablePadding="2dp"  />

        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/thumbnail"
            android:text="@string/default_comments_text"
            android:textSize="12sp"
            android:drawablePadding="2dp"/>

        <TextView
            android:id="@+id/time_of_creation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/comments"
            android:layout_below="@id/title"
            android:layout_marginStart="110dp"
            android:layout_marginTop="27dp"
            android:textSize="11sp"
            android:text="@string/default_time_text"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>